# awto-serial

./: .gitignore  CODING_STYLE.md  ISSUES.md  README.md  mcp_server.py  protocol.py  pyproject.toml  serial_daemon.py  test_harness.py  ttu_cli.py
.claude/: settings.json
contrib/: awto-serial-daemon.service
debris/docs/: SANDBOX-SERIAL-ACCESS.md
docs/: COMPLETION.md  DISCOVERY.md
scripts/: create_issues.sh
