[project]
name = "awto-mcp-serial"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "pyserial",
]

[tool.uv]
# Free-threaded / no-GIL build.
# On Fedora: sudo dnf install python3.14-freethreading
# Binary: /usr/bin/python3.14t
# Verify: python3.14t -c "import sys; print(sys._is_gil_enabled())"  -> False
python = "3.14t"
dev-dependencies = []
